--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <nav class="topicos">
                 <ul class="links">
                     <li><a href="#">INICIO</a></li>
-                    <li><a href="#">CATEGORIAS</a></li>
                     <li><a href="#">MAIS VENDIDOS</a></li>
                     <li><a href="#">LANÇAMENTOS</a></li>
-                    <li><a href="#">PROMOÇÕES</a></li>
+                    <li><a href="#">INFANTIL</a></li>
+                    <li><a href="#">PRÉ VENDA</a></li>
                 </ul>
             </nav>
         </div>
@@ -52,6 +52,8 @@
     </section>
 
     <main>
+
+        <!--Seção mais vendidos-->
         <h2 class="titulo-categoria">MAIS VENDIDOS</h2>
 
         <section class="secao-mais-vendidos">
@@ -167,9 +169,7 @@
         </section>
 
 
-
-
-
+        <!--Seção lançamentos-->
 
         <h2 class="titulo-categoria">LANÇAMENTOS</h2>
         <section>
@@ -287,8 +287,239 @@
         </section>
 
 
+        <!--Seção infantil-->
+
+        <h2 class="titulo-categoria">INFANTIL</h2>
+        <section>
+            <div class="carrossel">
+                <button class="anterior">❮</button>
+                <div class="container-trilha-carrossel">
+                    <ul class="trilha-carrossel">
+                        <li class="slide-carrossel">
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/nino_o_menino_de_saturno.jpeg" alt="Roube Como um Artista">
+                                <p>Nino, o menino de Saturno</p>
+                                <p>Ziraldo</p>
+                                <p>R$ 57,00</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/as_travessuras_do_amarelo.jpeg" alt="Empresas Feitas para Vencer">
+                                <p>As travessuras do amarelo</p>
+                                <p>Pedro Sales Luis Rosario</p>
+                                <p>R$ 45,00</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/manual_para_super_herois.jpeg" alt="Trabalhe 4 Horas por Semana">
+                                <p>Manual para super-heróis</p>
+                                <p>Laila Zaid</p>
+                                <p>R$ 50,00</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+
+                        </li>
+                        <li class="slide-carrossel">
+                                <div class="card-carrossel">
+                                <img src="assets/imagens/a_maquina_antibullying.jpeg" alt="A maquina antibullying">
+                                <p>A maquina antibullying</p>
+                                <p>Marcelo Amaral</p>
+                                <p>R$ 35,00</p>
+                                <button class="btn-comprar">Comprar</button>
+                                </div>
+
+                                <div class="card-carrossel">
+                                    <img src="assets/imagens/o_macaco_roxo_e_os_ninguem.jpeg" alt="O Jeito Disney de Encantar os Clientes">
+                                    <p>O macaco roxo e os ninguens</p>
+                                    <p>Caio Maia</p>
+                                    <p>R$ 35,00</p>
+                                    <button class="btn-comprar">Comprar</button>
+                                </div>
+
+                                <div class="card-carrossel">
+                                <img src="assets/imagens/tem_de_tudo_nesta_rua.jpeg" alt="Uma mulher">
+                                <p>Tem de tudo nesta rua</p>
+                                <p>Marcelo Xavier</p>
+                                <p>R$ 52,60</p>
+                                <button class="btn-comprar">Comprar</button>
+                                 </div>
+                        </li>
+
+                        <li class="slide-carrossel">
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/tres_noites_de_medo.jpeg" alt="Outro Livro">
+                                <p>Três noites de medo</p>
+                                <p>Rosana Rios</p>
+                                <p>R$ 50,00</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/se_o_mundo_fosse_uma_vila.jpeg" alt="Outro Livro">
+                                <p>Se o mundo fosse uma vila</p>
+                                <p>David J Smith</p>
+                                <p>R$ 46,00</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/a_bicicleta_do_tempo.jpeg" alt="É assim que acaba">
+                                <p>A bicicleta do tempo</p>
+                                <p>Daniela Pinotti</p>
+                                <p>R$ 63,00</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+                        </li>
 
 
+                        <li class="slide-carrossel">
+
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/enquanto_houver_limoeiros.jpeg" alt="As 48 Leis do Poder">
+                                <p>Enquanto houver limoeiros</p>
+                                <p>Zoulfa Katouh</p>
+                                <p>R$ 64,90</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/reinacoes_de_narizinho.jpeg" alt="Outro Livro">
+                                <p>Reinações de narizinho</p>
+                                <p>Monteiro Lobato</p>
+                                <p>R$ 99,90</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/o_galo_e_a_raposa.jpeg" alt="É assim que acaba">
+                                <p>A raposa e o Galo</p>
+                                <p>Alexandre Camanho</p>
+                                <p>R$ 79,90</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+                        </li>
+
+                    </ul>
+                </div>
+                <button class="proximo">❯</button>
+            </div>
+        </section>
+
+        <!--Seção pré-venda-->
+
+        <h2 class="titulo-categoria">PRÉ-VENDA</h2>
+        <section>
+            <div class="carrossel">
+                <button class="anterior">❮</button>
+                <div class="container-trilha-carrossel">
+                    <ul class="trilha-carrossel">
+                        <li class="slide-carrossel">
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/nao-e-como-nos-filmes.jpg" alt="Roube Como um Artista">
+                                <p>Não é commo nos filmes</p>
+                                <p>Lynn Painter</p>
+                                <p>R$ 39,90</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/o-cristao-pode-beber-colecao-teologia-para-todos.jpg" alt="Empresas Feitas para Vencer">
+                                <p>O cristão pode beber? | Coleção Teologia para todos</p>
+                                <p>Marcelo Berti</p>
+                                <p>R$ 14,90</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/elatambem.jpg" alt="Trabalhe 4 Horas por Semana">
+                                <p>#ELATAMBÉM</p>
+                                <p>Bonnie Kistler</p>
+                                <p>R$ 44,00</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+
+                        </li>
+                        <li class="slide-carrossel">
+                                <div class="card-carrossel">
+                                <img src="assets/imagens/para-todas-as-mulheres-que-nao-tem-coragem.jpg" alt="A maquina antibullying">
+                                <p>Para todas as mulheres que não têm coragem</p>
+                                <p>Dani Arrais</p>
+                                <p>R$ 34,90</p>
+                                <button class="btn-comprar">Comprar</button>
+                                </div>
+
+                                <div class="card-carrossel">
+                                    <img src="assets/imagens/a-sinfonia-das-estrelas.jpg" alt="O Jeito Disney de Encantar os Clientes">
+                                    <p>A sinfonia das estrelas</p>
+                                    <p>Rodrigo Ortiz Vinholo</p>
+                                    <p>R$ 9,99</p>
+                                    <button class="btn-comprar">Comprar</button>
+                                </div>
+
+                                <div class="card-carrossel">
+                                <img src="assets/imagens/nebulosas-1.jpg" alt="Uma mulher">
+                                <p>Nebulosas</p>
+                                <p>Narcisa Amália, Anna Faedrich</p>
+                                <p>R$ 29,90</p>
+                                <button class="btn-comprar">Comprar</button>
+                                 </div>
+                        </li>
+
+                        <li class="slide-carrossel">
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/intermezzo-46.jpg" alt="Outro Livro">
+                                <p>Intermezzo</p>
+                                <p>Sally Rooney</p>
+                                <p>R$ 39,90</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/a-lembranca-de-nos.jpg" alt="Outro Livro">
+                                <p>A lembrança de nós</p>
+                                <p>Dani Atkins</p>
+                                <p>R$ 19,95</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/como-vender-uma-casa-assombrada.jpg" alt="É assim que acaba">
+                                <p>Como vender uma casa mal assombrada</p>
+                                <p>Grady Hendrix</p>
+                                <p>R$ 46,90</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+                        </li>
+
+
+                        <li class="slide-carrossel">
+
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/chatices-do-amor.jpg" alt="As 48 Leis do Poder">
+                                <p>Chatices do amor</p>
+                                <p>Fernanda Young</p>
+                                <p>R$ 39,90</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/acrobata-1.jpg" alt="Outro Livro">
+                                <p>Acrobata</p>
+                                <p>Alice Sant'Anna, Kiko Farkas</p>
+                                <p>R$ 39,90</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+
+                            <div class="card-carrossel">
+                                <img src="assets/imagens/anel-de-vidro-1.jpg" alt="É assim que acaba">
+                                <p>Anel de vidro</p>
+                                <p>Ana Luisa Escorel, Daniel Trench</p>
+                                <p>R$ 49,90</p>
+                                <button class="btn-comprar">Comprar</button>
+                            </div>
+                        </li>
+
+                    </ul>
+                </div>
+                <button class="proximo">❯</button>
+            </div>
+        </section>
 
     </main>
 
